# sbomber

./: .gitignore  Makefile  README.md  pyproject.toml  sbomber  tox.ini
.github/actions/: action.yaml  run.yaml
.github/actions/run/: action.yaml
.github/workflows/: pull-request.yaml  run-scanner.yaml  run.yaml  scanner-workflow-test.yaml
examples/all/: manifest.yaml
examples/base/: manifest.yaml
examples/secscan/: manifest.yaml
sbombs/: .gitignore  README.md  sbom.py  sbom_manifest.yaml  sbom_statefile.yaml  sbomber
src/: .gitignore  README.md  main.py  manifest.yaml  pyproject.toml  sbom.py  sbom_manifest.yaml  sbomber  sbomber.py  secscanner.py  state.py
src/clients/: client.py  sbom.py  secscanner.py
src/services/: sbom.py
tests/: conftest.py  helpers.py  test_manifest.py  test_mime.py  test_sbomb_client.py  test_secscan_client.py  test_state_transitions.py  test_version_detection.py  test_yolo.py
tests/workflow-tests/: manifest.yaml
