[project]
name = "sbomber"
version = "0.2"
description = "Helper tool for Canonical's SSDLC services."
authors = [
  { name = "Pietro Pasotti", email = "pietro.pasotti@canonical.com"},
  { name = "Mateusz Kulewicz", email = "mateusz.kulewicz@canonical.com"},
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "craft-archives~=2.1",
  "packaging(==25.0)",
  "pydantic>=2.11.1",
  "pyyaml(==6.0.2)",
  "requests==2.32.3",
  "rich(==13.8.0)",
  "tenacity(==9.0.0)",
  "typer==0.16.0",
#  # FIXME: package incompatibility with modern ubuntu; we assume the package is system-wide installed
#  "python-apt@git+https://salsa.debian.org/apt-team/python-apt.git"
]

[project.optional-dependencies]
dev = [
  # Linting
  "ruff",
  "codespell",
  # Static
  "pyright==1.1.344",
  # Unit
  "pytest",
  "coverage[toml]",
  "deepdiff",
]

[project.urls]
"Homepage" = "https://github.com/canonical/sbomber"
"Bug Tracker" = "https://github.com/canonical/sbomber/issues"

[project.scripts]
sbomber = "sbomber:app"

[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "R", "D", "I001"]
# ignore = ["E501", "D107", "RET504", "C901"]
ignore = ["C901", "E501"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103"], "tests/constants.py" = ["E501"]}
extend-select = ["I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
package = false
python-preference = "only-system"