[project]
name = "sbomber"
version = "0.1"
description = "Helper tool for Canonical's SSDLC services."
authors = [
  { name = "Pietro Pasotti", email = "pietro.pasotti@canonical.com"},
  { name = "Mateusz Kulewicz", email = "mateusz.kulewicz@canonical.com"},
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
  "packaging(==24.1)",
  "pytest>=8.3.5",
  "pyyaml(==6.0.2)",
  "requests==2.32.3",
  "rich(==13.8.0)",
  "tenacity(==9.0.0)",
  "typer==0.15.2",
]

[project.urls]
"Homepage" = "https://github.com/canonical/sbomber"
"Bug Tracker" = "https://github.com/canonical/sbomber/issues"

[project.scripts]
sbomber = "sbomber:app"

[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "R", "D", "I001"]
# ignore = ["E501", "D107", "RET504", "C901"]
ignore = ["C901", "E501"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103"], "tests/constants.py" = ["E501"]}
extend-select = ["I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.workspace]
members = ["src"]

